# raylib-pathfinding

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: clang-ci.yml
src/: Camera.cpp  Engine.cpp  Engine.hpp  GameObject.hpp  Input.cpp  Input.hpp  Main.cpp  Movement.cpp  Movement.hpp  NavMesh.cpp  NavMesh.hpp  Obstacles.cpp  Obstacles.hpp  Player.hpp  PlayerFactory.hpp  Polygons.cpp  Polygons.hpp  Scene.cpp  Scene.hpp  ThetaStar.cpp  ThetaStar.hpp  Utils.cpp  Utils.hpp  VectorMath.cpp  VectorMath.hpp  camera.cpp  camera.hpp  engine.cpp  engine.hpp  input.cpp  input.hpp  main.cpp  movement.cpp  movement.hpp  nav_mesh.cpp  obstacles.cpp  obstacles.hpp  scene.cpp  scene.hpp  thetastar.cpp  (+5 more)
src/Components/: Components.hpp
src/Systems/: CameraSystem.cpp  CameraSystem.hpp  CollisionSystem.hpp  InputSystem.cpp  InputSystem.hpp  MinionSystem.cpp  MinionSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  PickingSystem.cpp  PickingSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  RenderUISystem.cpp  RenderUISystem.hpp  SimpleMovementSystem.cpp  SimpleMovementSystem.hpp
src/rayimage/: CMakeLists.txt  Image.cpp  Image.hpp
src/raymath/: CMakeLists.txt  Color.cpp  Color.hpp
